--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
         <div class="box1">
             <h2>SQL</h2>
             <div class="content-box1">
-                <h3>Extract/Transform/Load Pipeline</h3>
+                <h3>ELT Pipeline</h3>
                 <p>
                     An extract/load/transform pipeline for a small business utilizing a public dataset. It utilizes PostgreSQL as the database and involves triggers, procedures, and functions to extract and load data into business friendly views, and transforms data into consumable chunks of information for stakeholders.
                 </p>
