--- a/projects.html
+++ b/projects.html
@@ -18,38 +18,39 @@
     </div>
 
     <div class="main">
+
         <div class="box1">
-            <h1>Projects</h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+            <div class="content-box1">
+                <h1>Projects</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+            </div>
         </div>
 
         <div class="box3">
-            <h2>Java</h2>
-            <div>
-                <div class="content-box1">
-                    <h3>Inventory Management App</h3>
-                    <p>A Java application for managing and maintaining inventory for a small business. Showcases OOP proficiency and uses JavaFX as front-end for the desktop application.</p>
-                    <a class="large-button" href=https://github.com/culturedmold/Inventory-Management-Desktop-Application/blob/main/README.md>View</a>
-                </div>
+            <div class="content-box1">
+                <h2>Java</h2>
+                <h3>Inventory Management App</h3>
+                <p>
+                    A Java application for managing and maintaining inventory for a small business. Showcases OOP proficiency and uses JavaFX as front-end for the desktop application.
+                </p>
+                <a class="large-button" href=https://github.com/culturedmold/Inventory-Management-Desktop-Application/blob/main/README.md>View</a>
             </div>
         </div>
 
         <div class="box2">
-            <h2>C++</h2>
-            <div>
-                <div class="content-box1">
-                        <h3>Student Roster Parsing Tool</h3>
-                        <p>An exercise in memory management, parsing, and OOP concepts. The program takes an input string, parses the data, and creates an array of Student objects and outputs the data to console. Various methods are implemented to handle incorrectly formatted data (such as e-mail addresses).</p>
-                        <a class="large-button href="#github">View</a>
-                </div>  
-            </div>
+            <div class="content-box1">
+                <h2>C++</h2>
+                <h3>Student Roster Parsing Tool</h3>
+                <p>An exercise in memory management, parsing, and OOP concepts. The program takes an input string, parses the data, and creates an array of Student objects and outputs the data to console. Various methods are implemented to handle incorrectly formatted data (such as e-mail addresses).</p>
+                <a class="large-button href="#github">View</a>
+            </div>  
         </div>
 
-        <div class="box1">
-            <h2>SQL</h2>
+        <div class="box1">    
             <div class="content-box1">
+                <h2>SQL</h2>
                 <h3>ELT Pipeline</h3>
                 <p>
                     An extract/load/transform pipeline for a small business utilizing a public dataset. It utilizes PostgreSQL as the database and involves triggers, procedures, and functions to extract and load data into business friendly views, and transforms data into consumable chunks of information for stakeholders.
@@ -59,25 +60,30 @@
         </div>
 
         <div class="box2">
-            <h2>Swift</h2>
-            <div class="hbox">
+            
                 <div class="content-box1">
+                    <h2>Swift</h2>
                     <h3>St Anna GOC App</h3>
                     <p>A native iOS application I built for a local church. Utilizes Google Firebase for Content Management. SwiftUI provides the front-end framework for the app, and other Apple APIs like MapKit and AsyncImage provide additional functionality.</p>
                     <a class="large-button" href="#github">View</a>
-                </div>
             </div>
         </div>
 
         <div class="box3">
-            <h2>Python</h2>
-            <div class="hbox">
-                <div class="content-box1">
-                    <h3>Delivery Route Optimizer</h3>
-                </div>
+            <div>
+                <h2>Python</h2>
+                <div class="hbox">
 
-                <div class="content-box1">
-                    <h3>Machine Learning Algorithm</h3>
+                    <div class="content-box1">
+                        <h3>Delivery Route Optimizer</h3>
+                        <p>More to come...</p>
+                    </div>
+
+                    <div class="content-box1">
+                        <h3>Machine Learning Algorithm</h3>
+                        <p>More to come...</p>
+                    </div>
+
                 </div>
             </div>
         </div>
