--- a/experience.html
+++ b/experience.html
@@ -15,7 +15,43 @@
         <a href="projects.html">Projects</a>
         <a class="active" href="experience.html">Experience</a>
     </div>
-    <h1>Hello</h1>
+
+    <div class="main">
+
+        <!-- <img id="poppy2" src="./assets/poppy2.jpeg" alt="Oriental Poppy"> -->
+        <div class="img-box">
+            <div class="content-box1">
+                <h1>My Experience</h1>
+                <p>Lorem Ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit.</p>
+            </div>
+        </div>
+
+        <div class="box1">
+            <div class="content-box1">
+                <h2>Education</h2>
+            </div>
+        </div>
+
+        <div class="box2">
+            <div class="content-box1">
+                <h2>Experience</h2>
+            </div>
+        </div>
+
+        <div class="box3">
+            <div class="content-box1">
+                <h2>Projects</h2>
+            </div>
+        </div>
+
+        <div class="box1">
+            <div class="content-box1">
+                <h2>Certifications</h2>
+            </div>
+        </div>
+
+    </div>
+
     <!-- footer -->
     <footer>
         <h3>Contact Me</h3>
@@ -25,6 +61,6 @@
             <a href="#github">Github</a>
         </div>
     </footer>
-    
+
 </body>
 </html>
