responsive image with text element

--- a/experience.html
+++ b/experience.html
@@ -17,13 +17,23 @@
     </div>
 
     <div class="main">
+    
+        <div class="img-container">
+            <img src="./assets/poppy2.jpeg" alt="Poppy">
+            <div class="content-box1">
+                <h1>Experience</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
+            </div>
+        </div>
         
     </div>
 
     <!-- footer -->
     <footer>
         <h3>Contact Me</h3>
-        <div class="hbox">
+        <div>
             <a href="#email">Email</a>
             <a href="#linkedIn">LinkedIn</a>
             <a href="#github">Github</a>
