--- a/experience.html
+++ b/experience.html
@@ -27,6 +27,30 @@
                 </p>
             </div>
         </div>
+
+        <div class="box2">
+            <div class="content-box1">
+                <h2>Education</h2>
+            </div>
+        </div>
+
+        <div class="box1">
+            <div class="content-box1">
+                <h2>Experience</h2>
+            </div>
+        </div>
+
+        <div class="box3">
+            <div class="content-box1">
+                <h2>Projects</h2>
+            </div>
+        </div>
+
+        <div class="box2">
+            <div class="content-box1">
+                <h2>Certifications</h2>
+            </div>
+        </div>
         
     </div>
 
