--- a/experience.html
+++ b/experience.html
@@ -29,8 +29,19 @@
         </div>
 
         <div class="box2">
-            <div class="content-box1">
-                <h2>Education</h2>
+            <h2>Education</h2>
+            <div class="hbox">
+                <div class="content-box1">
+                    <h3>Western Governor's University</h3>
+                    <h4>Bachelor of Science, Computer Science</h4>
+                    <h4>2023</h4>
+                </div>
+
+                <div class="content-box1">
+                    <h3>Salt Lake Community College</h3>
+                    <h4>Associate in Science</h4>
+                    <h4>2022</h4>
+                </div>
             </div>
         </div>
 
