--- a/experience.html
+++ b/experience.html
@@ -29,6 +29,7 @@
         </div>
 
         <div class="box2">
+            <div class="content-box1">
             <h2>Education</h2>
             <div class="hbox">
                 <div class="content-box1">
@@ -42,6 +43,7 @@
                     <h4>Associate in Science</h4>
                     <h4>2022</h4>
                 </div>
+            </div>
             </div>
         </div>
 
