--- a/experience.html
+++ b/experience.html
@@ -19,7 +19,7 @@
     <div class="main">
     
         <div class="img-container">
-            <img src="./assets/poppy2.jpeg" alt="Poppy">
+            <img src="./assets/poppy.jpeg" alt="Poppy">
             <div class="content-box1">
                 <h1>Experience</h1>
                 <p>
