Updated projects to include new Python project

--- a/projects.html
+++ b/projects.html
@@ -75,14 +75,15 @@
                 <div class="hbox">
 
                     <div class="content-box1">
-                        <h3>Delivery Route Optimizer</h3>
-                        <p>More to come...</p>
+                        <h3>Delivery Route Algorithm</h3>
+                        <p>An object-oriented program that finds a delivery route for packages based on a CSV of addresses/distances and a CSV of package data. The algorithm uses a nearest-neighbor (greedy) approach to find a route that delivers all packages before their scheduled deadline and within predefined mileage constraints.</p>
+                        <a class="large-button" href="https://github.com/culturedmold/Delivery-Route-Algorithm">View</a>
                     </div>
 
-                    <div class="content-box1">
+                    <!-- <div class="content-box1">
                         <h3>Machine Learning Algorithm</h3>
                         <p>More to come...</p>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
