Updates to projects information

--- a/projects.html
+++ b/projects.html
@@ -39,9 +39,9 @@
                 <a class="large-button" href=https://github.com/culturedmold/Inventory-Management-Desktop-Application/blob/main/README.md>View</a>
             </div>
             <div class="cell">
-                <h3>Scheduling Tool with MySQL Database</h3>
+                <h3>Scheduling App with MySQL Database</h3>
                 <p>
-                    A Java application for managing and maintaining inventory for a small business. Showcases OOP proficiency and uses JavaFX as front-end for the desktop application.
+                    A desktop application for managing schedules/appointments. Utilizes MySQL connection to a MySQL database for CRUD operations on appointment and customer objects. Demonstrates OOP proficiency, error handling, and data structures/algorithms.
                 </p>
                 <a class="large-button" href=https://github.com/culturedmold/Inventory-Management-Desktop-Application/blob/main/README.md>View</a>
             </div>
@@ -87,7 +87,7 @@
             <div class="cell-full-width">
                 <div class="cell">
                 <h3>St Anna GOC App</h3>
-                <p>A native iOS application I built for a local church. Utilizes Google Firebase for Content Management. SwiftUI provides the front-end framework for the app, and other Apple APIs like MapKit and AsyncImage provide additional functionality.</p>
+                <p>A native iOS application I built for a local church. Utilizes Google Firebase for Content Management. SwiftUI provides the front-end framework for the app, and other Apple APIs (MapKit, AsyncImage) provide additional functionality.</p>
                 <a class="large-button" href="#github">View</a>
             </div>
             </div>
