--- a/experience.html
+++ b/experience.html
@@ -50,7 +50,7 @@
                 <h5>2022 - Present</h5>
                 <h4>Accomplishments</h4>
                 <ul>
-                    <li>Improved engagement in Loyalty Mobile App leading to an increase in Monthly Active Users of over 30% all platforms year-over-year.</li>
+                    <li>Increased Monthly Active Users over 30% all platforms year-over-year through initiatives to improve engagement and outreach (such as gamification and push notifications).</li>
                     <li>Unique Cardless-Payment capability in app for over 25% increased adoption in Digital Loyalty ACH Card Payments.</li>
                     <li>accomplishment here</li>
                     <li>accomplishment here</li>
