--- a/experience.html
+++ b/experience.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="top-level-cell">
-        <h1>Experience</h1>
+        <h1>Resume</h1>
     </div>
 
     <main>
@@ -25,7 +25,7 @@
         <section>
             <div class="container">
                 <div>
-                    <h2>Experience</h2>
+                    <h2>Professional Experience</h2>
                     <hr>
                 </div>
 
