style updates and subheader added to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </div>
     
     <div class="top-level-cell">
-        <h1>Hi, I'm Tyler</h1>
+        <h1>Tyler Hampton</h1>
+        <h5>Computer Science enthusiast, Product Management expert, & Software Developer</h5>
     </div>
 
     <main>
