--- a/projects.html
+++ b/projects.html
@@ -136,7 +136,7 @@
     </main>
 
     <footer>
-        <h3>Contact Me</h3>
+        <h3>Contact Me & More</h3>
         <div>
             <a href="#email">Email</a>
             <a href="#linkedIn">LinkedIn</a>
