--- a/experience.html
+++ b/experience.html
@@ -184,7 +184,7 @@
 
     <!-- footer -->
     <footer>
-        <h3>Contact Me</h3>
+        <h3>Contact Me & More</h3>
         <div>
             <a href="#email">Email</a>
             <a href="#linkedIn">LinkedIn</a>
